--- a/Makefile-ubuntu
+++ b/Makefile-ubuntu
@@ -60,6 +60,21 @@ all: allinstall nextinstall allupdate allbackup
 ${HOME}/.local:
 	mkdir -p $<
 
+nvm:
+    export NVM_DIR=${HOME}/.config/nvm
+    mkdir -p ${NVM_DIR}
+    curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.3/install.sh | bash
+
+npm-update:
+    nvm install-latest-npm
+
+pyenv:
+    rm -rf ${HOME}/.pyenv
+    curl https://pyenv.run | bash
+
+pyenv-update:
+    ${HOME}/.pyenv/bin/pyenv update
+
 rclone: ## Init rclone
 	$(PACMAN) $@
 	chmod 600 ${PWD}/.config/rclone/rclone.conf
