git config core.fsMonitor false

--- a/.gitconfig
+++ b/.gitconfig
@@ -1,7 +1,7 @@
 [user]
 	name = Toshiharu Harada
 	email = haradats@users.noreply.github.com
-    # signingkey = 288770C044C8CC3A
+    signingkey = 3C92A6F72AC13590
 [commit]
     # gpgsign = true
 [color]
@@ -33,7 +33,7 @@
 	pager = less
 	excludesfile = ~/.gitignore
 	commentchar = ^
-	fsmonitor = true
+	fsmonitor = false
 	untrackedcache = true
 [push]
 	default = upstream
