--- a/Makefile-ubuntu
+++ b/Makefile-ubuntu
@@ -150,13 +150,13 @@ rustinstall: ## Install rust and rust language server
 	rustup component add rls rust-analysis rust-src
 
 neomutt: ## Init neomutt mail client
-	$(PACMAN) neomutt
-	mkdir -p ${HOME}/.mutt
-	ln -vsf ${PWD}/.muttrc ${HOME}/.muttrc
-	for item in mailcap certifcates aliases signature; do ln -vsf {${PWD},${HOME}}/.mutt/$$item; done
-	ln -vsf {${PWD},${HOME}}/.goobookrc
-	yay -S goobook-git
-	goobook authenticate
+	# $(PACMAN) neomutt
+	# mkdir -p ${HOME}/.mutt
+	# ln -vsf ${PWD}/.muttrc ${HOME}/.muttrc
+	# for item in mailcap certifcates aliases signature; do ln -vsf {${PWD},${HOME}}/.mutt/$$item; done
+	# ln -vsf {${PWD},${HOME}}/.goobookrc
+	# yay -S goobook-git
+	# goobook authenticate
 
 alacritty: ## Init alacritty
 	$(PACMAN) $@
@@ -178,18 +178,18 @@ xterm: ## Init xterm terminal
 	for item in {,u}term; do sudo ln -vsf {${PWD},}/usr/share/applications/$$item.desktop; done
 
 mlterm: ## Init mlterm terminal
-	yay -S $@
-	mkdir -p ${HOME}/.$@
-	for item in main color aafont key; do
-		ln -vsf {${PWD},${HOME}}/.$@/$$item
-	done
-	sudo ln -vsf {${PWD},}/usr/share/applications/$@.desktop
-	sudo ln -vsf {${PWD},}/usr/share/applications/mlclient.desktop
+	# yay -S $@
+	# mkdir -p ${HOME}/.$@
+	# for item in main color aafont key; do
+	# 	ln -vsf {${PWD},${HOME}}/.$@/$$item
+	# done
+	# sudo ln -vsf {${PWD},}/usr/share/applications/$@.desktop
+	# sudo ln -vsf {${PWD},}/usr/share/applications/mlclient.desktop
 
 termite: ## Init termite terminal
-	yay -S $@
-	mkdir -p ${HOME}/.config/$@
-	ln -vsf {${PWD},${HOME}}/.config/$@/config
+	# yay -S $@
+	# mkdir -p ${HOME}/.config/$@
+	# ln -vsf {${PWD},${HOME}}/.config/$@/config
 
 dnsmasq: ## Init dnsmasq
 	$(PACMAN) $@
@@ -223,13 +223,13 @@ keyring: ${HOME}/.local ## Init gnome keyrings
 	ln -vsfn ${HOME}/{backup,.local/share}/keyrings
 
 ibusmozc: ## Install ibus-mozc
-	sudo ln -vsf ${PWD}/etc/environment /etc/environment
-	test -L ${HOME}/.mozc || rm -rf ${HOME}/.mozc
-	ln -vsfn ${HOME}/backup/mozc ${HOME}/.mozc
-	mkdir -p ${HOME}/.config/autostart
-	ln -vsf {${PWD},${HOME}}/.config/autostart/ibus.desktop
-	yay -S ibus-mozc
-	ibus-daemon -drx
+	# sudo ln -vsf ${PWD}/etc/environment /etc/environment
+	# test -L ${HOME}/.mozc || rm -rf ${HOME}/.mozc
+	# ln -vsfn ${HOME}/backup/mozc ${HOME}/.mozc
+	# mkdir -p ${HOME}/.config/autostart
+	# ln -vsf {${PWD},${HOME}}/.config/autostart/ibus.desktop
+	# yay -S ibus-mozc
+	# ibus-daemon -drx
 
 fcitx-mozc: ## Install fcitx-mozc
 	$(PACMAN) $@
@@ -240,7 +240,7 @@ fcitx-mozc: ## Install fcitx-mozc
 	ln -vsfn ${HOME}/backup/mozc ${HOME}/.mozc
 
 ttf-cica: ## Install Cica font
-	yay -S $@
+	# yay -S $@
 
 dconfsetting: # Initial dconf setting
 	sudo pacman -S dconf-editor
@@ -324,19 +324,19 @@ pgcli: ## Init pgcli
 	ln -vsfn ${HOME}/{backup,.config}/$@
 
 gcloud: ## Install google cloud SDK and setting
-	$(PACMAN) $@ kubectl kubectx kustomize helm
-	curl https://sdk.cloud.google.com | bash
-	test -L ${HOME}/.config/gcloud || rm -rf ${HOME}/.config/gcloud
-	ln -vsfn ${HOME}/{backup,.config}/gcloud
-	yay -S stern-bin
+	# $(PACMAN) $@ kubectl kubectx kustomize helm
+	# curl https://sdk.cloud.google.com | bash
+	# test -L ${HOME}/.config/gcloud || rm -rf ${HOME}/.config/gcloud
+	# ln -vsfn ${HOME}/{backup,.config}/gcloud
+	# yay -S stern-bin
 
 minikube: ## Setup minikube with kvm2
-	$(PACMAN) $@ libvirt qemu-headless ebtables docker-machine
-	yay -S docker-machine-driver-kvm2
-	sudo usermod -a -G libvirt ${USER}
-	$(SYSTEMD_ENABLE) libvirtd.service
-	$(SYSTEMD_ENABLE) virtlogd.service
-	$@ config set vm-driver kvm2
+	# $(PACMAN) $@ libvirt qemu-headless ebtables docker-machine
+	# yay -S docker-machine-driver-kvm2
+	# sudo usermod -a -G libvirt ${USER}
+	# $(SYSTEMD_ENABLE) libvirtd.service
+	# $(SYSTEMD_ENABLE) virtlogd.service
+	# $@ config set vm-driver kvm2
 
 kind: ## Setup kind (Kubernetes In Docker)
 	go install sigs.k8s.io/kind@v0.17.0
@@ -351,10 +351,10 @@ dingo: ## Install dingo Google DNS over HTTPS
 	$(SYSTEMD_ENABLE) $@.service
 
 ccls: ## Install c,c++ language server
-	yay -S ccls
+	# yay -S ccls
 
 android: ## Install android-studio
-	yay -S android-studio
+	# yay -S android-studio
 
 dart: ## Install dart and language server
 	$(PACMAN) $@
@@ -374,8 +374,8 @@ mpsyt: ## Install and deploy mps-youtube
 	ln -vsfn ${HOME}/backup/youtube/playlists ${HOME}/.config/mps-youtube/playlists
 
 spotify: ## Install spotify
-	gpg --keyserver hkp://keyserver.ubuntu.com --receive-keys 931FF8E79F0876134EDDBDCCA87FF9DF48BF1C90
-	yay -S spotify
+	# gpg --keyserver hkp://keyserver.ubuntu.com --receive-keys 931FF8E79F0876134EDDBDCCA87FF9DF48BF1C90
+	# yay -S spotify
 
 sxiv: ## Init sxiv
 	$(PACMAN) $@
@@ -383,31 +383,31 @@ sxiv: ## Init sxiv
 	ln -vsf {${PWD},${HOME}}/.config/$@/exec/image-info && chmod +x $$_
 
 zeal: ## Deploy zeal config and docsets
-	yay -S $@
-	sudo pacman -S qt5-styleplugins qt5ct
-	sudo ln -vsf ${PWD}/etc/environment /etc/environment
-	mkdir -p ${HOME}/.config/Zeal
-	ln -vsf {${PWD},${HOME}}/.config/Zeal/Zeal.conf
+	# yay -S $@
+	# sudo pacman -S qt5-styleplugins qt5ct
+	# sudo ln -vsf ${PWD}/etc/environment /etc/environment
+	# mkdir -p ${HOME}/.config/Zeal
+	# ln -vsf {${PWD},${HOME}}/.config/Zeal/Zeal.conf
 
 emacspeak: ## Install emacspeak for blind person
-	yay -S $@
+	# yay -S $@
 
 intel: ## Setup Intel Graphics
 	sudo ln -vsf {${PWD},}/etc/X11/xorg.conf.d/20-intel.conf
 
-yay: ## Install yay using yay
-	yay -S $@
+# yay: ## Install yay using yay
+	# yay -S $@
 
-aur: ## Install arch linux AUR packages using yay
-	yay -S downgrade git-secrets nvm pscale-cli rgxg slack-desktop zoom
+# aur: ## Install arch linux AUR packages using yay
+	# yay -S downgrade git-secrets nvm pscale-cli rgxg slack-desktop zoom
 
-sequeler: ## Install gui database tools
-	yay -S $@-git
+# sequeler: ## Install gui database tools
+	# yay -S $@-git
 
 beekeeper: ## Setup beekeeper-studio
-	yay -S $@-studio-bin
-	test -L ${HOME}/.config/$@-studio || rm -rf ${HOME}/.config/$@-studio
-	ln -vsfn ${HOME}/{backup,.config}/$@-studio
+	# yay -S $@-studio-bin
+	# test -L ${HOME}/.config/$@-studio || rm -rf ${HOME}/.config/$@-studio
+	# ln -vsfn ${HOME}/{backup,.config}/$@-studio
 
 dbeaver: ## Setup dbeaver
 	$(PACMAN) dbeaver
@@ -418,8 +418,8 @@ gh: ## Install and setup github-cli
 	test -L ${HOME}/.config/$@ || rm -rf ${HOME}/.config/$@
 	ln -vsfn ${HOME}/{backup,.config}/$@
 
-aurplus: ## Install arch linux AUR packages using yay
-	yay -S appimagelauncher drone-cli nkf pencil rtags skypeforlinux-stable-bin trivy-bin
+# aurplus: ## Install arch linux AUR packages using yay
+	# yay -S appimagelauncher drone-cli nkf pencil rtags skypeforlinux-stable-bin trivy-bin
 
 terraformer: ## Install terraformer
 	curl -LO https://github.com/GoogleCloudPlatform/$@/releases/download/`curl -s https://api.github.com/repos/GoogleCloudPlatform/$@/releases/latest | grep tag_name | cut -d '"' -f 4`/$@-aws-linux-amd64
@@ -466,11 +466,11 @@ sylpheed: ## Init sylpheed
 	ln -vsfn ${HOME}/{backup/sylpheed,}/.sylpheed-2.0
 
 psd: ## Profile-Sync-Daemon initial setup
-	yay -S profile-sync-daemon
-	mkdir -p ${HOME}/.config/psd
-	ln -vsf ${PWD}/.config/psd/psd.conf ${HOME}/.config/psd/psd.conf
-	echo "${USER} ALL=(ALL) NOPASSWD: /usr/bin/psd-overlay-helper" | sudo EDITOR='tee -a' visudo
-	systemctl --user --now enable psd.service
+	# yay -S profile-sync-daemon
+	# mkdir -p ${HOME}/.config/psd
+	# ln -vsf ${PWD}/.config/psd/psd.conf ${HOME}/.config/psd/psd.conf
+	# echo "${USER} ALL=(ALL) NOPASSWD: /usr/bin/psd-overlay-helper" | sudo EDITOR='tee -a' visudo
+	# systemctl --user --now enable psd.service
 
 chromium: ## Install chromium and noto-fonts and browserpass
 	$(PACMAN) $@ browserpass-$@ noto-fonts noto-fonts-cjk
@@ -502,8 +502,8 @@ mongodb: ## Mongodb initial setup
 	$(SYSTEMD_ENABLE) $@.service
 
 gnuglobal: ${HOME}/.local ## Install gnu global
-	pip install --user pygments
-	yay -S global
+	# pip install --user pygments
+	# yay -S global
 
 .ONESHELL:
 SHELL = /bin/bash
@@ -525,11 +525,11 @@ screenkey: ## Init screenkey
 	ln -vsf ${PWD}/.config/screenkey.json ${HOME}/.config/screenkey.json
 
 rbenv: ## Install rvenv ruby-build
-	yay -S $@
-	yay -S ruby-build
-	$@ install 2.7.2
-	$@ rehash
-	gem install bundle
+	# yay -S $@
+	# yay -S ruby-build
+	# $@ install 2.7.2
+	# $@ rehash
+	# gem install bundle
 
 rubygem: ## Install rubygem package
 	gem install bundler jekyll sass compass solargraph rawler rdoc irb rails
@@ -561,10 +561,10 @@ dvd: # Backup dvd media
 	$(PACMAN) libdvdcss dvdbackup
 
 tym: ## Init tym terminal
-	yay -S $@
-	mkdir -p ${HOME}/.config/$@
-	ln -vsf {${PWD},${HOME}}/.config/$@/config.lua
-	sudo ln -vsf {${PWD},}/usr/share/applications/$@.desktop
+	# yay -S $@
+	# mkdir -p ${HOME}/.config/$@
+	# ln -vsf {${PWD},${HOME}}/.config/$@/config.lua
+	# sudo ln -vsf {${PWD},}/usr/share/applications/$@.desktop
 
 backup: ## Backup arch linux packages
 	mkdir -p ${PWD}/archlinux
@@ -572,7 +572,7 @@ backup: ## Backup arch linux packages
 	pacman -Qqem > ${PWD}/archlinux/aurlist
 
 update: ## Update arch linux packages and save packages cache 3 generations
-	yay -Syu; paccache -ruk0
+	# yay -Syu; paccache -ruk0
 
 pipbackup: ## Backup python packages
 	mkdir -p ${PWD}/archlinux
