--- a/Makefile-ubuntu
+++ b/Makefile-ubuntu
@@ -47,7 +47,7 @@ PACKAGES    += texlive-lang-japanese texlive-luatex texlive-latex-recommended
 # BASE_PKGS	+= pciutils psmisc shadow util-linux bzip2 gzip xz licenses pacman systemd systemd-sysvcompat 
 # BASE_PKGS	+= iputils iproute2 autoconf sudo automake binutils bison fakeroot flex gcc groff libtool m4 
 # BASE_PKGS	+= make patch pkgconf texinfo which
-BASE_PKGS   := build-essential language-pack-ja binutils net-tools texinfo
+BASE_PKGS   := build-essential language-pack-ja binutils net-tools texinfo lzip
 
 # PACMAN		:= sudo pacman -S 
 PACMAN		:= sudo apt install -y
