--- a/Makefile-ubuntu
+++ b/Makefile-ubuntu
@@ -39,6 +39,7 @@ PIP_PKGS	+= zappa termdown jinja2
 # PACKAGES	+= diffoscope dust rbw exa sslscan abiword pyright miniserve fdupes deno serverless mold fx httpie
 # PACKAGES	+= bash-language-server gron pyenv
 PACKAGES    := zsh git vim keychain lynx aspell-en screen zsh-syntax-highlighting bash-completion w3m
+PACKAGES    += fzf libssl-dev libncurses-dev libbz2-dev libreadline-dev python3-tk lzma-dev
 PACKAGES    += tmux manpages-ja manpages-ja-dev
 PACKAGES    += emacs emacs-mozc emacs-mozc-bin
 PACKAGES    += texlive-lang-japanese texlive-luatex texlive-latex-recommended
