--- a/Makefile-ubuntu
+++ b/Makefile-ubuntu
@@ -39,7 +39,7 @@ PIP_PKGS	+= zappa termdown jinja2
 # PACKAGES	+= diffoscope dust rbw exa sslscan abiword pyright miniserve fdupes deno serverless mold fx httpie
 # PACKAGES	+= bash-language-server gron pyenv
 PACKAGES    := zsh zsh-doc zsh-syntax-highlighting bash-completion fzf
-PACKAGES    := git vim keychain lynx aspell-en w3m screen tmux
+PACKAGES    += git vim keychain lynx aspell-en w3m screen tmux
 PACKAGES    += libssl-dev libncurses-dev libbz2-dev libreadline-dev python3-tk lzma-dev x11-xserver-utils
 PACKAGES    += apt-file rsync
 PACKAGES    += manpages-ja manpages-ja-dev
