--- a/Makefile-ubuntu
+++ b/Makefile-ubuntu
@@ -38,7 +38,8 @@ PIP_PKGS	+= zappa termdown jinja2
 # PACKAGES	+= guetzli fabric python-language-server detox usleep libvterm bind asunder lame git-lfs hex miller
 # PACKAGES	+= diffoscope dust rbw exa sslscan abiword pyright miniserve fdupes deno serverless mold fx httpie
 # PACKAGES	+= bash-language-server gron pyenv
-PACKAGES    := zsh zsh-doc zsh-syntax-highlighting bash-completion fzf
+PACKAGES    := base
+PACKAGES	+= zsh zsh-doc zsh-syntax-highlighting bash-completion fzf
 PACKAGES    += git vim keychain lynx aspell-en w3m screen tmux x11-apps
 PACKAGES    += libssl-dev libncurses-dev libbz2-dev libreadline-dev python3-tk lzma-dev x11-xserver-utils
 PACKAGES    += apt-file rsync
@@ -50,7 +51,11 @@ PACKAGES    += texlive-lang-japanese texlive-luatex texlive-latex-recommended
 # BASE_PKGS	+= pciutils psmisc shadow util-linux bzip2 gzip xz licenses pacman systemd systemd-sysvcompat 
 # BASE_PKGS	+= iputils iproute2 autoconf sudo automake binutils bison fakeroot flex gcc groff libtool m4 
 # BASE_PKGS	+= make patch pkgconf texinfo which
-BASE_PKGS   := build-essential language-pack-ja binutils net-tools texinfo lzip xlunzip libsqlite3-dev
+BASE_PKGS   := build-essential language-pack-ja net-tools lzip xlunzip libsqlite3-dev
+BASE_PKGS	+= bash coreutils file findutils gawk grep sed tar gettext
+BASE_PKGS	+= pciutils psmisc util-linux bzip2 gzip pacman systemd
+BASE_PKGS	+= iproute2 autoconf sudo automake binutils bison fakeroot flex gcc groff libtool m4 
+BASE_PKGS	+= make patch pkgconf texinfo
 
 # PACMAN		:= sudo pacman -S 
 PACMAN		:= sudo apt install -y
