--- a/Makefile-ubuntu
+++ b/Makefile-ubuntu
@@ -1,4 +1,4 @@
-export PATH := ${HOME}/.local/bin:${HOME}/.node_modules/bin:$(HOME)/.pyenv/shims:${HOME}/.cargo/bin:/usr/local/bin:/usr/local/sbin:/usr/bin:/usr/bin/core_perl:${HOME}/bin:${HOME}/google-cloud-sdk/bin
+export PATH := ${HOME}/.local/bin:${HOME}/.node_modules/bin:${HOME}/.pyenv/shims:${NVM_BIN}:${HOME}/.cargo/bin:/usr/local/bin:/usr/local/sbin:/usr/bin:/usr/bin/core_perl:${HOME}/bin:${HOME}/google-cloud-sdk/bin
 export GOPATH := ${HOME}
 
 NODE_PKGS	:= babel-eslint cloc create-nuxt-app create-react-app webpack firebase-tools now
@@ -159,9 +159,9 @@ goinstall: ${HOME}/.local ## Install go packages
 	go install github.com/mithrandie/csvq@latest
 
 nodeinstall: ## Install node packages
-	# sudo pacman -S yarn
-	# mkdir -p ${HOME}/.node_modules
-	# for pkg in $(NODE_PKGS); do yarn global add $$pkg; done
+	sudo $(PACMAN) -S yarn
+	mkdir -p ${HOME}/.node_modules
+	for pkg in $(NODE_PKGS); do yarn global add $$pkg; done
 
 rustinstall: ## Install rust and rust language server
 	# sudo pacman -S rustup
