--- a/Makefile-ubuntu
+++ b/Makefile-ubuntu
@@ -1,7 +1,7 @@
 export PATH := ${HOME}/.local/bin:${HOME}/.node_modules/bin:${HOME}/.pyenv/shims:${NVM_BIN}:${HOME}/.cargo/bin:/usr/local/bin:/usr/local/sbin:/usr/bin:/usr/bin/core_perl:${HOME}/bin:${HOME}/google-cloud-sdk/bin
 export GOPATH := ${HOME}
 
-NODE_PKGS	:= babel-eslint cloc create-nuxt-app create-react-app webpack firebase-tools now
+NODE_PKGS	:= babel-eslint cloc create-nuxt-app create-react-app webpack firebase-tools vercel
 NODE_PKGS	+= dockerfile-language-server-nodejs eslint eslint-cli eslint-config-vue netlify-cli
 NODE_PKGS	+= eslint-plugin-react eslint-plugin-vue@next expo-cli fx heroku ngrok prettier
 NODE_PKGS	+= indium intelephense javascript-typescript-langserver logo.svg @marp-team/marp-cli
