--- a/etc/wsl.conf
+++ b/etc/wsl.conf
@@ -6,7 +6,7 @@ enabled = true
 
 # Sets the directory where fixed drives will be automatically mounted. This example changes the mount location, so your C-drive would be /c, rather than the default /mnt/c.
 # root = /
-root = /mnt/c
+root = /mnt/
 
 # DrvFs-specific options can be specified.
 options = "metadata,uid=1000,gid=1000,umask=077,fmask=11,case=off"
