--- a/etc/wsl.conf
+++ b/etc/wsl.conf
@@ -22,8 +22,8 @@ generateResolvConf = false
 
 # Set whether WSL supports interop processes like launching Windows apps and adding path variables. Setting these to false will block the launch of Windows processes and block adding $PATH environment variables.
 [interop]
-enabled = false
-appendWindowsPath = false
+enabled = true ##
+appendWindowsPath = true ##
 
 # Set the user when launching a distribution with WSL.
 [user]
