--- a/Makefile-ubuntu
+++ b/Makefile-ubuntu
@@ -482,6 +482,26 @@ toggle: ## Prepare command that toggle between emacs and browser
 	sudo ln -vsf {${PWD},}/usr/share/applications/$@.desktop
 	sudo install ${PWD}/.$@.sh /usr/local/bin/$@
 
+azure:
+	sudo apt-get update
+	$(PACMAN) apt-transport-https ca-certificates curl gnupg lsb-release
+	# 
+	sudo mkdir -p /etc/apt/keyrings
+	curl -sLS https://packages.microsoft.com/keys/microsoft.asc | \
+			gpg --dearmor | sudo tee /etc/apt/keyrings/microsoft.gpg > /dev/null
+	sudo chmod go+r /etc/apt/keyrings/microsoft.gpg
+	#
+	AZ_DIST=$(lsb_release -cs)
+	echo "Types: deb
+	URIs: https://packages.microsoft.com/repos/azure-cli/
+	Suites: $(shell lsb_release -cs)
+	Components: main
+	Architectures: $(dpkg --print-architecture)
+	Signed-by: /etc/apt/keyrings/microsoft.gpg" | sudo tee /etc/apt/sources.list.d/azure-cli.sources
+	#
+	sudo apt-get update
+	$(PACMAN) azure-cli
+
 aws: ${HOME}/.local ## Init aws cli
 	pip install --user awscli
 	ln -vsfn {${PWD},${HOME}}/.$@
